--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-header {
-    width: 100%;
-    }
-
 
 header {
   background-color: purple;
@@ -30,10 +26,13 @@ main {
   padding-bottom: 25px;
 }
 
+
 .menu ul li {
     display: block;
     border-bottom: 2px solid pink;
     padding: 15px 0px 15px 0px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
 }
 
 .menu ul li :last-child {
@@ -55,12 +54,37 @@ main {
 
 }
 
+/* tablet */
 @media screen and (min-width: 480px) {
+    .menu ul li {
+        display: block;
+        border-bottom: 2px solid pink;
+        padding: 15px 0px 15px 0px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.5em;
+    }
+
+    .menu ul li :last-child {
+        border-bottom: none;
+    }
+
+    .menu a {
+        text-decoration: none;
+        color: white;
+    }
+
+}
+
+/* desktop */
+
+@media screen and (min-width: 1003px) {
     .menu ul li {
         display: inline-block;
         text-decoration: none;
         padding: 15px;
         border-bottom: none;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.5em;
 
     }
 
