--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+h1, h2 {
+    font-family: 'Arapey', serif;
+}
 
 header {
   background-color: purple;
@@ -44,15 +47,6 @@ main {
     color: white;
 }
 
-
-#about {
-  background-color: #FF9425;
-  width: 100%;
-  text-align: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
-
-}
 
 /* tablet */
 @media screen and (min-width: 480px) {
