--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,23 @@ h1, h2 {
     font-family: 'Arapey', serif;
 }
 
+h2 {
+    font-size: 1.5em;
+}
+
 header {
   background-color: purple;
   width: 100%;
   text-align: center;
   padding-top: 25px;
-  padding-bottom: 25px;
+  padding-bottom: 15px;
   background-image: url('../img/header1.jpg');
   background-size: cover;
+  margin-bottom: -60px;
+}
+
+h1.hidden {
+    visibility: hidden;
 }
 
 header img {
@@ -33,9 +42,17 @@ main {
   padding-bottom: 25px;
 }
 
+main #gallery, #location, h2 {
+    color: #563E3F
+}
+
 #menu {
     background-image: url('../img/bg-slate.jpg');
     background-size: cover;
+}
+
+#menu h2 {
+    color: white;
 }
 
 .menu ul li {
@@ -81,6 +98,10 @@ main {
         max-width: 250px;
     }
 
+    h2 {
+        font-size: 2em;
+    }
+
 }
 
 /* desktop */
@@ -99,6 +120,10 @@ main {
 
     header img {
         max-width: 300px;
+    }
+
+    h2 {
+        font-size: 2.3em;
     }
 
 }
@@ -138,7 +163,6 @@ main {
   padding-bottom: 25px;
 
 }
-
 
 
 #location {
