--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,14 @@ main #gallery, #location, h2 {
         font-size: 2em;
     }
 
+    #mainc, #menuc {
+      width: 75%;
+      margin: auto;
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.5em;
+
+    }
+
 }
 
 /* desktop */
@@ -126,13 +134,21 @@ main #gallery, #location, h2 {
         font-size: 2.3em;
     }
 
+    #mainc, #menuc {
+      width: 60%;
+      margin: auto;
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.5em;
+
+    }
 }
 
 
 #mainc, #menuc {
-  width: 70%;
+  width: 85%;
   margin: auto;
   font-family: 'Roboto', sans-serif;
+  line-height: 1.5em;
 
 }
 
