--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,14 @@ main #gallery, #location, #gifts, h2 {
 }
 
 
+#mainc, #menuc, #giftsc {
+  width: 85%;
+  margin: auto;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.5em;
+
+}
+
 /* tablet */
 @media screen and (min-width: 480px) {
     .menu ul li {
@@ -156,14 +164,6 @@ main #gallery, #location, #gifts, h2 {
 }
 
 
-#mainc, #menuc, #giftsc {
-  width: 85%;
-  margin: auto;
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.5em;
-
-}
-
 #menu {
   background-color: #FFFBE1;
   width: 100%;
@@ -217,6 +217,72 @@ main #gallery, #location, #gifts, h2 {
   padding-bottom: 25px;
 
 }
+
+#gifts p {
+    color: black;
+}
+
+#buttons {
+    margin: 0 auto;
+    width: 50%;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    text-align: center;
+}
+
+
+#button1 {
+    display: inline-block;
+    padding: 1em;
+    background-color: #890407;
+    text-decoration: none;
+    margin: 20px;
+    border-radius: 5px;
+
+}
+
+#button1 a {
+    color: #e5e1d2;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
+
+/* Underline From Center - green underline */
+.hvr-underline-from-center {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    position: relative;
+    overflow: hidden;
+}
+
+.hvr-underline-from-center::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    background: #1e431e;
+    height: 4px;
+    -webkit-transition-property: left, right;
+    transition-property: left, right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-center:hover::before,
+.hvr-underline-from-center:focus::before,
+.hvr-underline-from-center:active::before {
+    left: 0;
+    right: 0;
+}
+
 
 
 footer {
