--- a/css/main.css
+++ b/css/main.css
@@ -276,10 +276,9 @@ ul, menu, dir {
 }
 
 
+
 #gifts {
-  background-color: red;
-  background-image: url('../img/give-bg.jpg');
-  background-size: cover;
+  background-color: white;
   min-height: 300px;
   position: relative;
   width: 100%;
@@ -363,9 +362,49 @@ ul, menu, dir {
 
 footer {
     background-color: #888686;
+    background-image: url('../img/give-bg.jpg');
+    background-size: cover;
+    height: 500px;
     width: 100%;
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
 
+}
+
+#footerc a {
+    margin: 10px;
+}
+
+.fa {
+    padding: 30px;
+    font-size: 50px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-yelp {
+    background: red;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
 }
